argocd/homarr/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homarr-route
  namespace: homarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gateway
      namespace: gatewayapi
  hostnames:
    - homarr.h.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: homarr
          port: 7575
          weight: 1
